# alepc

./: Cargo.toml  README.md  TODO  build.rs
.github/: moved_to_released.sh
.github/ISSUE_TEMPLATE/: bug.md
.github/config/: release-changelog-builder-action.json
.github/workflows/: assets.yml  move_to_released.yml
scripts/: main.py
src/: app.rs  errors.rs  main.rs
src/config/: config.ron  config_utils.rs  mod.rs
src/errors/: mod.rs  statuses.rs
src/tests/: config.rs  mod.rs  post.rs
src/utils/: creator.rs  helpers.rs  mod.rs  post.rs  properties.rs  questions.rs  validators.rs
src/utils/questions/: create.rs  mod.rs  modify.rs
