[package]
name = "alepc"
version = "0.4.0"
edition = "2021"
rust-version = "1.68.2"
license = "GPL-3.0-only"
authors = ["Awiteb <https://github.com/TheAwiteb>"]
readme = "README.md"
description = "Simple CLI to create/modify aleecers post template 🦀"
repository = "https://github.com/aleecers/Alepc"
keywords = ["helper", "CLI"]
categories = ["command-line-utilities"]
build = "build.rs"

[dependencies]
chrono = "0.4.31"
colored = "2.0.4"
directories = "5.0.1"
educe = { version = "0.4.23", features = ["Default"] }
lazy_static = "1.4.0"
log = "0.4.20"
log-derive = "0.4.1"
pretty_env_logger = "0.5.0"
regex = "1.9.5"
requestty = "0.5.0"
ron = "0.8.1"
rust_search = "2.1.0"
serde = { version = "1.0.188", features = ["derive"] }
strum = { version = "0.25.0", features = ["derive"] }
thiserror = "1.0.37"
url = { version = "2.2.2", features = ["serde"] }

[build-dependencies]
vergen = { version = "7.5.1", default-features = false, features = ["git"] }
anyhow = "1.0.66"

[profile.release]
strip = true # Automatically strip symbols from the binary.
